# burzpage

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  SPECIFICATIONS.md  Taskfile.yml
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml
docs/: .prettierignore  astro.config.mjs  index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts  config.ts
docs/src/: index.md
docs/src/content/docs/: index.mdx
docs/src/dev-guide/: spec-sheet.md
docs/src/styles/: custom.css
server/: Taskfile.yml  go.mod  go.sum  main.go
server/cmd/: main.go
server/cmd/burzcontent/: main.go
server/docs/: docs.go  swagger.json
server/internal/api/: api.go
server/internal/api/handlers/: articles.go  comment_handler.go  comments.go  handlers.go  user_handler.go  users.go
server/internal/api/models/: articles.go  comments.go  users.go
server/internal/api/routes/: routes.go
server/internal/api/services/: articles.go  comments.go  users.go
server/internal/config/: config.go
server/internal/handler/articles/: articles.go
server/internal/handler/comments/: comments.go
server/internal/handler/docs/: docs.go
server/internal/handler/user/: user.go
server/internal/handler/users/: users.go  users_test.go
server/internal/logger/: logger.go
server/internal/server/: server.go  server_test.go
server/internal/testutils/: testutils.go
server/templates/: docs.html
server/v1/: config.py  pyproject.toml
server/v1/api/: API.md  main.py
server/v2/: go.mod  go.sum
server/v2/docs/: swagger.yaml
(+4 files in other folders)
